--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.js"></script>
 
     <form action="/extract">
-      <button type="submit" class="btn btn-primary">compare</button>
+      <button type="submit" class="btn btn-primary">Download</button>
     
 
     </form>
